start of support for distance&bearing (input ui)  #2376
git-svn-id: https://subversion.assembla.com/svn/smart-cs/trunk@7418 37136b1e-4cb1-4992-8394-573b48a9bdce